--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,11 @@ buck-out/
 /ios/Pods/
 google-services.json
 GoogleService-Info.plist
+
+android/app/src/main/assets/index.android.bundle
+android/app/src/main/assets/index.android.bundle.meta
+android/app/src/main/res/drawable-hdpi/
+android/app/src/main/res/drawable-mdpi/
+android/app/src/main/res/drawable-xhdpi/
+android/app/src/main/res/drawable-xxhdpi/
+android/app/src/main/res/drawable-xxxhdpi/
