--- a/package.json
+++ b/package.json
@@ -26,24 +26,31 @@
   },
   "dependencies": {
     "fbjs": "^0.8.16",
+    "firebase": "^4.11.0",
     "immutable": "^3.8.2",
     "lodash": "^4.17.5",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-native": "^0.53.0",
     "react-native-dropdownalert": "^3.4.0",
     "react-native-elements": "^0.19.0",
     "react-native-firebase": "^3.2.7",
     "react-native-gesture-recognizers": "^0.3.0",
+    "react-native-google-signin": "git+https://github.com/invertase/react-native-google-signin.git#v0.12.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-popup-dialog": "^0.11.46",
+    "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-slider": "^0.11.0",
     "react-native-swipe-gestures": "^1.0.2",
     "react-navigation": "^1.5.2",
+    "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
     "redux-immutable": "^4.0.0",
+    "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
     "reduxsauce": "^0.7.0",
     "seamless-immutable": "^7.1.3"
   }
