--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "immutable": "^3.8.2",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
+    "object-assign-deep": "^0.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-native": "^0.53.0",
