--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "object-assign-deep": "^0.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-native": "^0.53.0",
     "react-native-dropdownalert": "^3.4.0",
     "react-native-elements": "^0.19.0",
