--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-popup-dialog": "^0.11.46",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-slider": "^0.11.0",
+    "react-native-svg": "^6.3.1",
     "react-native-swipe-gestures": "^1.0.2",
     "react-navigation": "^1.5.2",
     "react-navigation-redux-helpers": "^1.0.3",
