--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,13 +99,13 @@ android {
     dexOptions {
         javaMaxHeapSize "4g"
     }
-    compileSdkVersion 24
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
-        applicationId "com.wakeupwarriors.warriorgame"
+        applicationId "com.wakeupwarrior.thegame"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         ndk {
@@ -155,7 +155,9 @@ dependencies {
     // RNFirebase required dependencies
     compile "com.google.firebase:firebase-core:11.8.0"
     compile "com.google.android.gms:play-services-base:11.8.0"
-
+    
+    compile project(':react-native-svg')
+    
     // RNFirebase optional dependencies
     compile "com.google.firebase:firebase-ads:11.8.0"
     compile "com.google.firebase:firebase-auth:11.8.0"
@@ -172,7 +174,7 @@ dependencies {
     }
 
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.android.support:appcompat-v7:26.0.2"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
