Feature/Misc-Updates

--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "react-native-firebase": "^3.2.7",
     "react-native-gesture-recognizers": "^0.3.0",
     "react-native-google-signin": "git+https://github.com/invertase/react-native-google-signin.git#v0.12.1",
+    "react-native-iphone-x-helper": "^1.0.2",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-popup-dialog": "^0.11.46",
     "react-native-router-flux": "^4.0.0-beta.28",
+    "react-native-safe-area-view": "^0.7.0",
+    "react-native-shadow": "^1.2.2",
     "react-native-slider": "^0.11.0",
     "react-native-svg": "^6.3.1",
     "react-native-swipe-gestures": "^1.0.2",
