--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-popup-dialog": "^0.11.46",
+    "react-native-progress": "^3.4.0",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-native-safe-area-view": "^0.7.0",
     "react-native-shadow": "^1.2.2",
