Feature/Stack-Update

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fast-image')
     compile(project(':react-native-firebase')) {
         transitive = false
     }
