--- a/package.json
+++ b/package.json
@@ -39,31 +39,19 @@
     "react-addons-shallow-compare": "^15.6.2",
     "react-native": "^0.53.0",
     "react-native-dropdownalert": "^3.4.0",
-    "react-native-elements": "^0.19.0",
     "react-native-extended-stylesheet": "^0.8.1",
+    "react-native-fast-image": "^4.0.0",
     "react-native-firebase": "^3.2.7",
-    "react-native-gesture-recognizers": "^0.3.0",
     "react-native-google-signin": "git+https://github.com/invertase/react-native-google-signin.git#v0.12.1",
     "react-native-iphone-x-helper": "^1.0.2",
-    "react-native-loading-spinner-overlay": "^0.5.2",
-    "react-native-popup-dialog": "^0.11.46",
     "react-native-progress": "^3.4.0",
-    "react-native-router-flux": "^4.0.0-beta.28",
-    "react-native-safe-area-view": "^0.7.0",
     "react-native-shadow": "^1.2.2",
-    "react-native-slider": "^0.11.0",
     "react-native-svg": "^6.3.1",
-    "react-native-swipe-gestures": "^1.0.2",
     "react-navigation": "^1.5.2",
     "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "redux-actions": "^2.3.0",
-    "redux-immutable": "^4.0.0",
     "redux-persist": "^5.9.1",
-    "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.2.0",
-    "reduxsauce": "^0.7.0",
-    "seamless-immutable": "^7.1.3"
+    "redux-thunk": "^2.2.0"
   }
 }
