--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-extended-stylesheet": "^0.8.1",
     "react-native-fast-image": "^4.0.0",
     "react-native-firebase": "^3.2.7",
+    "react-native-global-props": "^1.1.3",
     "react-native-google-signin": "git+https://github.com/invertase/react-native-google-signin.git#v0.12.1",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-progress": "^3.4.0",
